# tldr-app

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  Popup.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: apply_glass_effect.toml  summarize_text.toml  update_hotkeys.toml
src-tauri/src/: lib.rs  main.rs
~/.tauri/: tldr-app.key  tldr-app.key.pub
